--- a/app/views/investors/index.html.erb
+++ b/app/views/investors/index.html.erb
@@ -1,1 +1,32 @@
-<h1>ANGEL INVESTORS</h1>
+  <div class="page-header">
+    <%= link_to "Create Investor", new_investor_path, class:"btn btn-info pull-right" %>
+    <h1>ANGEL INVESTORS</h1>
+  </div>
+
+  <h4>Extra text, if you want to display something specific. </h4>
+  <table class="table table-striped table-bordered">
+      <thead>
+        <tr>
+          <th>First Name </th>
+          <th>Last Name </th>
+          <th>Email </th>
+          <th>Company </th>
+          <th>Rank </th>
+          <th> Edit </th>
+          <th> Delete </th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @investors.each do |investor| %>
+          <tr>
+            <td> <%= investor.first_name %> </td>
+            <td> <%= investor.last_name %> </td>
+            <td> <%= investor.email %> </td>
+            <td> <%= investor.company %> </td>
+            <td> <%= investor.rank %> </td>
+            <td> <%= link_to "Edit", edit_investor_path(investor.id) %> </td>
+            <td> <%= link_to '', investor_path(investor.id), method: :delete, class:"glyphicon glyphicon-remove" %> </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
