--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,15 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <div class="container">
+    <% if flash[:notice] %>
+      <p>
+        <div class="alert alert-warning" role="alert"> <%= flash[:notice] %> </div>
+      </p>
+    <% end %>
 
 <%= yield %>
 
+  </div>
 </body>
 </html>
