--- a/app/views/investors/index.html.erb
+++ b/app/views/investors/index.html.erb
@@ -7,8 +7,7 @@
   <table class="table table-striped table-bordered">
       <thead>
         <tr>
-          <th>First Name </th>
-          <th>Last Name </th>
+          <th>Full Name </th>
           <th>Email </th>
           <th>Company </th>
           <th>Rank </th>
@@ -19,8 +18,7 @@
       <tbody>
         <% @investors.each do |investor| %>
           <tr>
-            <td> <%= investor.first_name %> </td>
-            <td> <%= investor.last_name %> </td>
+            <td> <%= investor.full_name %> </td>
             <td> <%= investor.email %> </td>
             <td> <%= investor.company %> </td>
             <td> <%= investor.rank %> </td>
