Added linkedin URL to investor form

--- a/app/views/investors/_investorform.html.erb
+++ b/app/views/investors/_investorform.html.erb
@@ -37,6 +37,13 @@
       </div>
     </div>
 
+    <div class="form-group">
+      <%= f.label :linkedin, 'LinkedIn Profile URL', class: "col-md-2 control-label" %>
+      <div class="col-md-5">
+        <%= f.text_field :linkedin, class: "form-control" %>
+      </div>
+    </div>
+
     <div class="col-md-offset-2 col-md-5">
       <%= f.submit button_nm, class: "btn btn-primary" %>
       <%= link_to "Cancel", investors_path, class: "btn btn-default" %>
