Updated all redirects to root_path instead of investors_path

--- a/app/views/investors/_investorform.html.erb
+++ b/app/views/investors/_investorform.html.erb
@@ -46,7 +46,7 @@
 
     <div class="col-md-offset-2 col-md-5">
       <%= f.submit button_nm, class: "btn btn-primary" %>
-      <%= link_to "Cancel", investors_path, class: "btn btn-default" %>
+      <%= link_to "Cancel", root_path, class: "btn btn-default" %>
     </div>
   </div>
 <% end %>
