--- a/app/views/investors/edit.html.erb
+++ b/app/views/investors/edit.html.erb
@@ -1,5 +1,5 @@
   <div class="page-header">
-    <%= link_to "Investors", investors_path, class:"btn btn-primary pull-right" %>
+    <%= link_to "Investors", root_path, class:"btn btn-primary pull-right" %>
     <h1>Edit Investor</h1>
   </div>
 
