--- a/app/views/endorsements/new.html.erb
+++ b/app/views/endorsements/new.html.erb
@@ -8,8 +8,16 @@
 
     <%= form_for @endorsements do |f| %>
       <div class="form-horizontal">
+
         <div class="form-group">
-          <%= f.label :endorsed, 'Endorsed', class: "col-md-4 control-label" %>
+          <%= f.label :investor_id, 'Person making the recommendation', class: "col-md-4 control-label" %>
+          <div class="col-md-5">
+            <%= f.collection_select :investor_id, Investor.all, :id, :full_name, {prompt: 'Please select the person making the recommendation'}, {class:'form-control'} %>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <%= f.label :endorsed, 'Person being endorsed', class: "col-md-4 control-label" %>
           <div class="col-md-5">
             <%= f.collection_select :endorsed, Investor.all, :id, :full_name, {prompt: 'Please select the person you wish to recommend...'}, {class:'form-control'} %>
           </div>
