--- a/app/views/investors/show.html.haml
+++ b/app/views/investors/show.html.haml
@@ -1,15 +1,17 @@
 .page-header
   = link_to "Investors", root_path, class:"btn btn-primary pull-right"
   %h1= @investor.full_name
+%h5= mail_to(@investor.email)
 %br
-%h5= "#{@investor.full_name}'s email is #{@investor.email}, and this investor has #{@endorsements.where(endorsed: @investor.id).count} recommendations."
-- @endorsements.where(endorsed: @investor.id).each do |endorsement|
-  %p
-  %strong= "#{Investor.find(endorsement.investor_id).full_name} has endorsed #{@investor.first_name} with the following recommendation:"
-  %p= "#{endorsement.comment}"
-%br
-%br
-- if @endorsements.where(investor_id: @investor.id).count > 0
-  %h5= "#{@investor.full_name} has also endorsed the following #{pluralize(@endorsements.where(investor_id: @investor.id).count, 'investor')}:"
-  - @endorsements.where(investor_id: @investor.id).each do |endorsement|
-    %li= "#{Investor.find(endorsement.endorsed).full_name}: #{endorsement.comment}"
+- if @endorsements.count > 0
+  .well
+    = "This investor has #{@endorsements.count} recommendations."
+    - @endorsements.each do |endorsement|
+      %p
+      %strong= "#{endorsement.investor.full_name} has endorsed #{@investor.full_name} with the following recommendation:"
+      %p= "#{endorsement.comment}"
+- if @investor.endorsements.count > 0
+  .well
+    %h5= "#{@investor.full_name} has also endorsed the following #{pluralize(@investor.endorsements.count, 'investor')}:"
+    - @investor.endorsements.each do |endorsement|
+      %li= "#{Investor.find(endorsement.endorsed).full_name}: #{endorsement.comment}"
