Tweaks Brian requested

--- a/app/views/endorsements/new.haml
+++ b/app/views/endorsements/new.haml
@@ -1,4 +1,6 @@
-%h1 ADD YOUR ENDORSEMENT!
+.page-header
+  = link_to "Create New Investor", new_investor_path, class:"btn btn-primary pull-right"
+  %h1 ADD YOUR ENDORSEMENT
 %br/
 .col-md-offset-2.col-md-8
   .well
