Added new endorsement button on investors#index

--- a/app/views/investors/index.html.haml
+++ b/app/views/investors/index.html.haml
@@ -1,6 +1,8 @@
 .page-header
-  = link_to "Create Investor", new_investor_path, class:"btn btn-info pull-right"
+  = link_to "Create Investor", new_investor_path, class:"btn btn-primary pull-right"
   %h1 ANGEL INVESTORS
+  .col-md-offset-2.col-md-10
+  = link_to "Add Endorsement", new_endorsement_path, class:"btn btn-info pull-right"
 %h4 Extra text, if you want to display something specific.
 %table.table.table-striped.table-bordered
   %thead
