--- a/app/views/investors/index.html.haml
+++ b/app/views/investors/index.html.haml
@@ -3,33 +3,10 @@
   %h1 ANGEL INVESTORS
   .col-md-offset-2.col-md-10
   = link_to "Add Endorsement", new_endorsement_path, class:"btn btn-info pull-right"
-= form_tag root_path, :method => 'get' do
+= form_tag root_path, :method => 'get', :id => "products_search" do
   .form-group
     .col-md-6
       = text_field_tag :search, params[:search], class:'form-control'
     = submit_tag "Search", :name => nil, class:'btn btn-primary control-label'
-%table.table.table-striped.table-bordered
-  %thead
-    %tr
-      %th Full Name
-      %th Email
-      %th Company
-      %th Rank
-      %th Edit
-      %th Delete
-  %tbody
-    - @investors.each do |investor|
-      %tr
-        %td
-          = link_to investor.full_name, investor_path(investor.id)
-        %td
-          = investor.email
-        %td
-          = investor.company
-        %td
-          = investor.rank
-        %td
-          = link_to "Edit", edit_investor_path(investor.id)
-        %td
-          = link_to '', investor_path(investor.id), method: :delete, class:"glyphicon glyphicon-remove"
+  #investors= render 'investors'
 = will_paginate @investors
