temporary changes to remove 'add csv' option

--- a/app/views/investors/index.html.haml
+++ b/app/views/investors/index.html.haml
@@ -8,7 +8,7 @@
     = submit_tag "Search", :name => nil, class:'btn btn-primary control-label'
 
 = render 'investors'
-%h2 Import Products
-= form_tag import_investors_path, multipart: true do
-  = file_field_tag :file
-  = submit_tag "Import", class: 'btn btn-primary'
+-# %h2 Import Products
+-# = form_tag import_investors_path, multipart: true do
+-#   = file_field_tag :file
+-#   = submit_tag "Import", class: 'btn btn-primary'
